full-moon/tests/cases/fail/parser/if-1/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/if-1
---
error[ast]: unexpected token ``.  (expected `end` to conclude `if`)
  ┌─ source.lua:1:10
  │
1 │ if x then
  │          ^


